# svsm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: qemu.yml  spellcheck.yml
aproxy/: Cargo.toml
aproxy/src/: attest.rs  main.rs
bootlib/src/: igvm_params.rs
igvmbuilder/src/: gpa_map.rs  igvm_builder.rs  igvm_firmware.rs
installation/INSTALL/: index.html
kernel/: Cargo.toml
kernel/src/: attest.rs  boot_params.rs  error.rs  fw_cfg.rs  igvm_params.rs  lib.rs  svsm.rs  testing.rs  types.rs
kernel/src/cpu/: vc.rs
kernel/src/platform/: mod.rs  native.rs  tdp.rs
kernel/src/utils/: util.rs
kernel/src/virtio/: devices.rs  hal.rs  mmio.rs
kernel/src/vsock/: api.rs  error.rs  mod.rs  stream.rs  virtio_vsock.rs  vsock.rs
libaproxy/: Cargo.toml
libtcgtpm/: Cargo.toml
rustdoc/: help.html  search-index.js  settings.html  src-files.js
rustdoc/search.index/: 003ce64b8cbb.js  005af56079e7.js  00a6e4a78681.js  00d7e1309080.js  00e9afd676ed.js  0127488adbe1.js  0147fd5d5caa.js  0161f59c94cc.js  016863e4a470.js  017b0b270709.js  01d3e2a27d6e.js  01fde85f583e.js  0202030a877c.js  026146a5ae78.js  0268da12b19e.js  02697caa498e.js  027929cd60a1.js  027cf8175f0e.js  029884e05ef5.js  02c8132abdc2.js  030dceab8b30.js  0356c09b4e03.js  037dbbe31ffc.js  038b5fed74a8.js  0393e2764409.js  039cead3da63.js  03a8873785c8.js  03af4c1c32f2.js  03e2a4b46d95.js  03edc2f82efb.js  043ae63e5746.js  04440bfa14b1.js  044a8ae8a092.js  0452a547a55e.js  04acd5fd7f36.js  04b9aaecaf77.js  04d08d214963.js  04decf211038.js  04e1bfd6326a.js  0501c55da2cc.js  (+1204 more)
rustdoc/stage2/: all.html  fn.copy_page_to_kernel.html  fn.get_kernel_elf.html  fn.init_percpu.html  fn.load_elf_segment.html  index.html  (+16 more)
scripts/: launch_guest.sh  test-in-svsm.sh
verus_stub/: Cargo.toml
(+1904 files in other folders)
