[package]
name = "svsm"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "stage2"
path = "src/stage2.rs"
test = false

[[bin]]
name = "svsm"
path = "src/svsm.rs"
test = false

[lib]
test = true
doctest = true

[dependencies]
bootlib.workspace = true
cpuarch.workspace = true
libaproxy = { workspace = true, optional = true }
elf.workspace = true
syscall.workspace = true

aes-gcm = { workspace = true, features = ["aes", "alloc"] }
bitfield-struct.workspace = true
bitflags.workspace = true
igvm_defs = { workspace = true, features = ["unstable"] }
intrusive-collections.workspace = true
log = { workspace = true, features = ["max_level_info", "release_max_level_info"] }
packit.workspace = true
libtcgtpm = { workspace = true, optional = true }
rustc-demangle = { workspace = true }
serde = { workspace = true, optional = true, features = ["alloc", "derive"] }
serde_json = { workspace = true, optional = true, features = ["alloc"] }
zerocopy = { workspace = true, features = ["alloc", "derive"] }
release.workspace = true
# Need "force-soft", see https://github.com/RustCrypto/hashes/issues/446
sha2 = { workspace = true, features = ["force-soft"] }
uuid.workspace = true
virtio-drivers = { workspace = true, optional = true }

verus_stub = { workspace = true }

[target."x86_64-unknown-none".dev-dependencies]
test.workspace = true

[features]
attest = []

default = []
enable-gdb = []
vtpm = ["dep:libtcgtpm"]
nosmep = []
nosmap = []
verus_all = []
verus = []
noverify = []
virtio-drivers = ["dep:virtio-drivers"]
block = []

[dev-dependencies]
sha2 = { workspace = true, features = ["force-soft"] }

[build-dependencies]
rustc_version = "0.4"

[lints]
workspace = true
